<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="hello">Hello World, Menu!</string>
    <string name="app_name">Sunshine</string>
    <string name="recordsAndMeetings">Records and Meetings</string>
    <string name="seekers">Seekers</string>
    <string name="holders">Holders</string>
    <string name="laws">Principles and Laws</string>
    <string name="search">Search:</string>
    <string name="searchInText">search for text in:</string>
    <string name="questions">questions</string>
    <string name="answers">answers</string>
    <string name="go">Go</string>
    <string name="search2">Search</string>

</resources>