<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/linearLayoutMain"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:background="#D9AB21" >

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical" >

        <ImageView
            android:id="@+id/imageView1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true"
            android:padding="10dip"
            android:src="@drawable/logo_trans" />

        <LinearLayout
            android:id="@+id/linearLayout1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="5dip"
            android:layout_marginBottom="20dip"
            android:layout_marginLeft="20dip"
            android:layout_marginRight="20dip"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="15dip"
                android:text="@string/recordsAndMeetings"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textColor="#000000" />

            <LinearLayout
                android:id="@+id/linearLayout2"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical" >

                <Button
                    android:id="@+id/buttonSeekers"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="top"
                    android:layout_marginBottom="15dip"
                    android:layout_weight="1"
                    android:text="@string/seekers"
                    android:textSize="20dip" />

                <Button
                    android:id="@+id/buttonHolders"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center_vertical"
                    android:layout_marginBottom="15dip"
                    android:layout_weight="1"
                    android:text="@string/holders"
                    android:textSize="20dip" />

                <Button
                    android:id="@+id/buttonLaws"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="bottom"
                    android:layout_marginBottom="15dip"
                    android:layout_weight="1"
                    android:text="@string/laws"
                    android:textSize="20dip" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

</LinearLayout>