<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#ffffff" >

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical" >

        <RelativeLayout
            android:id="@+id/relativeLayout1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <ImageView
                android:id="@+id/imageView1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"
                android:padding="10dip"
                android:src="@drawable/logo_trans" />

        </RelativeLayout>

        <LinearLayout
            android:id="@+id/linearLayout1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="0dip"
            android:layout_marginLeft="20dip"
            android:layout_marginRight="20dip"
            android:layout_marginTop="5dip"
            android:orientation="vertical" >

            <LinearLayout
                android:id="@+id/linearLayout5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="15dip" >

                <TextView
                    android:id="@+id/textView1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginRight="10dip"
                    android:text="@string/recordsAndMeetings"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:textColor="#000000" />

                <LinearLayout
                    android:id="@+id/linearLayout6"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1" >
                </LinearLayout>

                <ImageButton
                    android:id="@+id/buttonSearch"
                    android:layout_width="50dip"
                    android:layout_height="50dip"
                    android:adjustViewBounds="true"
                    android:paddingBottom="8dip"
                    android:paddingLeft="8dip"
                    android:paddingRight="5dip"
                    android:paddingTop="5dip"
                    android:scaleType="fitCenter"
                    android:src="@drawable/search" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/linearLayout2"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical" >

                <Button
                    android:id="@+id/buttonSeekers"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="top"
                    android:layout_marginBottom="15dip"
                    android:layout_weight="1"
                    android:text="@string/seekers"
                    android:textSize="20dip" />

                <Button
                    android:id="@+id/buttonHolders"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center_vertical"
                    android:layout_marginBottom="15dip"
                    android:layout_weight="1"
                    android:text="@string/holders"
                    android:textSize="20dip" />

                <LinearLayout
                    android:id="@+id/linearLayout4"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginBottom="15dip"
                    android:layout_weight="1" >

                    <Button
                        android:id="@+id/buttonLaws"
                        android:layout_width="0dip"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:text="@string/laws"
                        android:textSize="20dip" />
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

</LinearLayout>